finishing mobile design going to tablette fixing overflow

--- a/style.Css
+++ b/style.Css
@@ -7,7 +7,6 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  outline: 1px solid red;
 }
 section {
   width: 80%;
@@ -758,7 +757,7 @@ footer {
   color: #ffffff;
 }
 /*RESPONSIVITY*/
-@media screen and (min-width: 320px) and (max-width: 600px) {
+@media screen and (min-width: 320px) {
   section {
     width: 100%;
   }
@@ -789,10 +788,10 @@ footer {
   }
   .side-bare-div {
     position: fixed;
-    top: 10vh;
+    top: 9%;
     left: 0;
     background-color: #073b43;
-    width: 98%;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -885,7 +884,8 @@ footer {
   }
   .second-section ul {
     display: grid;
-    grid-template-columns: 40% 60%;
+    grid-template-columns: 30% 60%;
+    gap: 15px;
   }
   .second-section ul li {
     justify-content: flex-start;
@@ -973,7 +973,7 @@ footer {
     font-size: 1.25rem;
     line-height: 1.5rem;
     padding-bottom: 10px;
-    white-space: wrap;
+    text-align: center;
   }
   .section-header-title p {
     font-size: 0.9rem;
@@ -1045,12 +1045,13 @@ footer {
     line-height: 2.5rem;
     color: #ffffff;
     align-self: flex-start;
+    white-space: nowrap;
     margin-left: -5px;
   }
   .seventh-section ul {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 30%;
+    column-gap: 16%;
   }
 
   .col-1,
@@ -1097,8 +1098,9 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  .nineth-section h1 {
-    padding-right: 100px;
+  .nineth-section .elegance {
+    margin-right: -30%;
+    margin-bottom: 10%;
     color: #ffffff;
   }
   /*10th section*/
@@ -1115,8 +1117,8 @@ footer {
   }
   .img-section-side-cercle {
     position: absolute;
-    top: -50px;
-    left: 60px;
+    top: -10%;
+    left: 15%;
     width: 70%;
     height: 40%;
     border-radius: 0 0 0 0;
@@ -1200,6 +1202,8 @@ footer {
     font-weight: 300;
     color: #ffffffcc;
     align-self: center;
+    text-align: center;
+    white-space: nowrap;
     padding-top: 40px;
   }
   .left-footer {
@@ -1248,7 +1252,7 @@ footer {
     gap: 30px;
   }
   .get-email h2 {
-    font-size: 1.5rem;
+    font-size: 1.35rem;
     line-height: 1rem;
     font-weight: 300;
     color: #ffffff;
@@ -1283,6 +1287,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 62px;
   }
   .list-right-footer ul li a {
     position: relative;
@@ -1316,6 +1321,35 @@ footer {
     color: #ffffff;
   }
 }
+@media screen and (min-width: 400px) and (max-width: 600px) {
+  * {
+    font-size: clamp(1rem, 2vw, 3.25rem);
+  }
+  .sixth-section::after {
+    width: 77%;
+    height: 49%;
+    top: 19%;
+    left: 12%;
+  }
+  .left-footer {
+    justify-content: space-around;
+    align-self: auto;
+    margin-left: 10%;
+  }
+  .list-right-footer ul {
+    justify-content: space-between;
+  }
+  .side-cercle-div a {
+    padding: 3%;
+  }
+  .side-cercle-div {
+    gap: 24px;
+  }
+  .side-cercle-div p {
+    font-size: 1rem;
+  }
+}
+
 /*Tablette*/
 @media (max-width: 1024px) {
 }
